# blog-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: docker-publish.yaml  docker_publish.yml  docker_publish_and_tests.yml
app/: app.py  config.py  main.py  pytest.ini
app/alembic/: env.py
app/auth/: dependencies.py
app/core/: auth_dependencies.py  jwt.py  security.py
app/database/: dependencies.py  session.py
app/db/: dependencies.py  session.py
app/enums/: token_type.py
app/exceptions/: article_exceptions.py  comment_exceptions.py  token_exceptions.py  user_exceptions.py
app/migrations/: env.py
app/models/: article_model.py  articles.py  comment_model.py  comments.py  token_model.py  user_model.py  users.py
app/repositories/: article_repository.py  comment_repository.py  dependencies.py  token_repository.py  user_repository.py
app/routers/: article_router.py  comments_router.py  dependencies.py  user_router.py
app/routes/: api_router.py  articles.py  comments.py  users.py
app/schemas/: article_schemas.py  articles.py  comment_schemas.py  comments.py  token_schemas.py  user.py  user_schemas.py  users.py
app/services/: article_service.py  articles.py  auth_service.py  comment_service.py  comments.py  dependencies.py  jwt_service.py  user.py  user_service.py  users.py
app/tests/: conftest.py  test_users.py
app/tests/clients/: user_client.py  (+2 more)
app/utils/: app_lifespan.py  http_responses.py  responses.py
blog/: app.py  config.py  main.py
blog/auth/: dependencies.py
blog/database/: dependencies.py
blog/exceptions/: user_exceptions.py
blog/migrations/: env.py
blog/models/: user_model.py
blog/repositories/: article_repository.py  dependencies.py  user_repository.py
blog/routers/: article_router.py  user_router.py
blog/schemas/: comment_schemas.py  token_schemas.py  user_schemas.py
blog/services/: article_service.py  auth_service.py  comment_service.py  dependencies.py  jwt_service.py  user_service.py
blog/tests/: conftest.py
blog/users/: dependencies.py  router.py  user_model.py  user_router.py  user_schemas.py  user_service.py
blog/validators/: dependencies.py  user_validator.py
blog_service/: Dockerfile  README.md  alembic.ini  config.py  docker-compose.yaml  main.py  pyproject.toml
blog_service/app/: config.py  main.py
blog_service/database/: engine.py
blog_service/migrations/: env.py
nginx/: nginx.conf
notification_worker/: Dockerfile  pyproject.toml
notification_worker/app/: config.py  database.py  main.py  models.py
users_service/: Dockerfile  alembic.ini  config.py  docker-compose.yaml  main.py  pyproject.toml
users_service/app/: config.py  main.py
users_service/app/core/: security.py
users_service/app/database/: session.py
users_service/app/enums/: token_type.py
users_service/app/exceptions/: credentials_exceptions.py  subscription_exception.py
users_service/app/migrations/: env.py
users_service/app/migrations/versions/: 3bbba2017a7e_fff.py  4802b1d34aa9_описание_изменений.py  ab62092c2f5c_add_subscriptions_table.py  eddc185c35c5_init.py
users_service/app/models/: subscription_model.py  token_model.py  user_model.py
users_service/app/repositories/: dependencies.py  subscription_repository.py  user_repository.py
users_service/app/routers/: dependencies.py  subscription_router.py  user_router.py
users_service/app/schemas/: subscription_schemas.py  user_schemas.py
users_service/app/services/: dependencies.py  subscription_service.py  user_service.py
users_service/app/tests/: conftest.py
users_service/app/tests/test_user/: test_delete_user.py  test_login_user.py  test_search_user.py
users_service/exceptions/: user_exceptions.py
users_service/migrations/: env.py
users_service/models/: user_model.py
users_service/repositories/: dependencies.py
users_service/routers/: dependencies.py  user_router.py
users_service/schemas/: token_schemas.py
users_service/services/: auth_service.py  dependencies.py  jwt_service.py
users_service/tests/test_user/: test_get_user.py  test_register_user.py
(+67 files in other folders)
