[project]
name = "notification-worker"
version = "0.1.0"
description = ""
authors = [
    {name = "portlexs",email = "portnyagin924@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "celery (>=5.6.0,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
