[project]
name = "users-service"
version = "0.1.0"
description = ""
authors = [
    {name = "portlexs",email = "portnyagin924@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[pytest]
addopts = "-s -v"
asyncio_mode = "auto"
python_files = "*_tests.py test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_default_fixture_loop_scope = "function"
